# flowo_client

./: .env.template  .gitignore  README.md  SOLUTION_SUMMARY.md  analysis_options.yaml  firebase.json  flutter_restart.sh  icon_replacement_instructions.md  icon_replacement_readme.md  icon_replacement_script.dart  icon_replacement_solution.md  icon_replacement_solution_steps.md  pubspec.yaml  run_log.txt
.github/workflows/: qodana_code_quality.yml
android/: build.gradle  build_log.txt  flutter.properties  gradle.properties
android/app/: build.gradle  build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  llama_inference.cpp
android_backup/: build.gradle
docs/: api_key_security.md  mobile_llm_evaluation.md  mobile_llm_research.md  plan.md  style_guide.md  tasks.md
ios/: Podfile  README_PODS_FIX.md  fix_pods.sh
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  LlamaCppBridge.cpp  LlamaInference.swift  llama_inference.cpp
ios/Runner 2025-04-05 11-24-09/: DistributionSummary.plist  ExportOptions.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  theme_notifier.dart
lib/config/: env_config.dart
lib/data/: README.md
linux/: CMakeLists.txt
server/: .env.example  README.md  __init__.py  main.py  requirements.txt
test/: date_time_formatter_test.dart  pipeline_example.dart  scheduler_test.dart  task_test.dart  widget_test.dart
web/: README.md  index.html  manifest.json
web-app/: README.md  package-lock.json  package.json
windows/: CMakeLists.txt
(+461 files in other folders)
